@@ -4,9 +4,10 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
-public class MybatisPageHandler extends Page<Object> implements IPageDataHandler {
+public class CustomizePageDataHandler extends Page<Object> implements IPageDataHandler {
     @Override
     public void setWrenchPage(long page) {
         this.setCurrent(page);
@@ -23,9 +24,8 @@ public class MybatisPageHandler extends Page<Object> implements IPageDataHandler
     public void setWrenchTotalPage(long totalPage) {
         this.setPages(totalPage);
     }
-
     @Override
     public void setWrenchData(Collection<Object> records) {
-        this.setRecords(List.copyOf(records));
+        this.setRecords(Collections.singletonList(records));
     }
 }
